--- a/server/templates/edit_plant.html
+++ b/server/templates/edit_plant.html
@@ -90,6 +90,7 @@
     </head>
 
     <body>
+        <nav nav><a href="../../../main_page">&#129044; Home</a></nav>
         <p id="plant_id_field" hidden>{{ plant_id }}</p>
         
         <table>
