--- a/server/templates/plant.html
+++ b/server/templates/plant.html
@@ -6,20 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/css/main.css">
+    <style>
+        body *:not([nav]):not([class="btn_bar"]):not([nav] *) {
+            margin-left: 5%;
+        }
+    </style>
     <title>Szapp Pflapp</title>
     <link rel="icon" type="image/x-icon" href="../static/img/001-botanic.svg">
     <script type="application/x-javascript" src="http://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous">
     </script>
     <script type="application/x-javascript" src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <style>
-        body * {
-            margin-left: 5%;
-        }
-    </style>
 </head>
 
 <body>
+    <nav nav><a href="../main_page">&#129044; Home</a></nav>
     <div class="btn_bar">
         <button id="update" class="btn">Edit</button>
         <button id="delete" class="btn">Delete</button>
