--- a/server/static/css/style_01.css
+++ b/server/static/css/style_01.css
@@ -2,21 +2,7 @@
 
 
 body {
-    background-color: #353535;
-    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
-    color: #ffffff
-}
-
-.heading {
-    font-size: large;
-    color: #a9ba5a;
-}
-
-h1 {
-    font-size: xx-large;
-    text-align: center;
-    color: #a9ba5a;
 }
 
 .btn {
@@ -66,9 +52,9 @@ h1 {
 }
 
 #divShortDescr {
-    width: 60%;
-    margin-left: 20%;
+    width: 75%;
+    margin: auto;
     text-align: justify;
     line-height: 28pt;
-    font-size: 22pt;
+    font-size: x-large;
 }
