--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/css/style_01.css">
+    <link rel="stylesheet" href="../static/css/main.css">
     <title>Szapp Pflapp</title>
     <link rel="icon" type="image/x-icon" href="../static/img/001-botanic.svg">
 </head>
@@ -25,9 +26,12 @@
         </p>
     </div>
 
-    <form method="get" action="/main_page">
-        <button id="btnStart" class="btn">Starten</button>
-    </form>
+        <form method="get" action="/main_page">
+            <button id="btnStart" class="btn">Starten</button>
+        </form>
+        <footer>
+            <a href="https://github.com/Proliecan/szapp-pflapp" target="_blank"><h2>SOURCE CODE:</h2><img src="https://skillicons.dev/icons?i=github" alt="github repo"></a>
+        </footer>
 </body>
 
 </html>
