--- a/server/static/css/wave.css
+++ b/server/static/css/wave.css
@@ -18,6 +18,7 @@
     background-image:
         radial-gradient(circle at 10px -5px, transparent 12px, var(--blue) 13px);
     bottom: var(--percentage);
+    z-index: 1;
 }
 
 .wave::after {
@@ -31,4 +32,6 @@
     background-image:
         radial-gradient(circle at 10px 15px, var(--blue) 12px, transparent 13px);
     bottom: var(--percentage);
+    z-index: 1;
+    
 }
